# glyph

./: .env.example  .eslintrc.cjs  .gitignore  .lintstagedrc.mjs  README.md  bun.lockb  package.json  turbo.json
apps/api/: .lintstagedrc.mjs  bun.lockb  main.py  package.json  pyproject.toml
apps/api/glyth/: settings.py
apps/api/glyth/routes/: auth.py  codes.py
apps/api/pont/routes/: auth.py
apps/extension/: components.json  manifest.json  package.json  service-worker.ts  tailwind.config.js  tsconfig.json  vite.config.mts
apps/extension/src/: App.vue  router.ts
apps/extension/src/components/layouts/: DefaultLayout.vue  PageLayout.vue
apps/extension/src/components/ui/avatar/: index.ts
apps/extension/src/components/ui/button/: index.ts
apps/extension/src/composables/: useAuth.ts  useCodes.ts  usePont.ts
apps/extension/src/layouts/: DefaultLayout.vue
apps/extension/src/views/: IndexView.vue  SettingsView.vue  SignInView.vue
